--- a/public/index.html
+++ b/public/index.html
@@ -1490,12 +1490,12 @@
                 <h2>Dosen Pembimbing</h2>
                 <div class="team-grid-simple">
                     <div class="team-card">
-                        <img src="images/suratun.jpg" alt="Dr. Suratun Nafisah, S.Si., M.Sc.">
+                        <img src="images/suratun.png" alt="Dr. Suratun Nafisah, S.Si., M.Sc.">
                         <h3>Dr. Suratun Nafisah, S.Si., M.Sc.</h3>
                         <p>Dosen Pembimbing 1</p>
                     </div>
                     <div class="team-card">
-                        <img src="images/hadi.jpeg" alt="Hadi Teguh Yudistira, S.T., Ph.D.">
+                        <img src="images/hadi.png" alt="Hadi Teguh Yudistira, S.T., Ph.D.">
                         <h3>Hadi Teguh Yudistira, S.T., Ph.D.</h3>
                         <p>Dosen Pembimbing 2</p>
                     </div>
@@ -1505,17 +1505,17 @@
                 <h2>Tim Pengembang</h2>
                 <div class="team-grid-simple">
                     <div class="team-card">
-                        <img src="images/fauzi.jpg" alt="Muhamad Fauzi">
+                        <img src="images/fauzi.png" alt="Muhamad Fauzi">
                         <h3>Muhamad Fauzi</h3>
                         <p>Subsistem Material</p>
                     </div>
                     <div class="team-card">
-                        <img src="images/argya.jpg" alt="M. Argya Putra Laksono">
+                        <img src="images/argya.png" alt="M. Argya Putra Laksono">
                         <h3>M. Argya Putra Laksono</h3>
                         <p>Subsistem Instrumentasi</p>
                     </div>
                     <div class="team-card">
-                        <img src="images/jose.jpg" alt="Josevein Hutagalung">
+                        <img src="images/jose.png" alt="Josevein Hutagalung">
                         <h3>Josevein Hutagalung</h3>
                         <p>Subsistem Internet of Things</p>
                     </div>
