--- a/public/index.html
+++ b/public/index.html
@@ -25,39 +25,37 @@
         </div>
     </div>
 </div>
-<div id="auth-container" class="auth-container">
+<div id="auth-container" class="auth-container" style="background: url('images/PomClear.png') no-repeat center center / cover;">
     <form id="login-form" class="auth-form">
-        <h2>Login</h2>
-        <label for="login-email">Email:</label>
-        <input type="email" id="login-email" required>
-        <label for="login-password">Password:</label>
-        <input type="password" id="login-password" required>
-        <div class="forgot-password">
-            <a href="#" id="forgot-password-link">Forgot Password?</a>
-        </div>
-        <button type="submit">Login</button>
-        <div id="login-error" class="error hidden"></div>
-        <p style="text-align: center; margin-top: 10px;">Don't have an account? <a href="#" id="register-link">Register</a></p>
+    <h2>Login</h2>
+    <label for="login-email">Email:</label>
+    <input type="email" id="login-email" required>
+    <label for="login-password">Password:</label>
+    <input type="password" id="login-password" required>
+    <div class="forgot-password"><a href="#" id="forgot-password-link">Forgot Password?</a></div>
+    <button type="submit">Login</button>
+    <div id="login-error" class="error hidden"></div>
+    <p style="text-align: center; margin-top: 10px;">Don't have an account? <a href="#" id="register-link">Register</a></p>
     </form>
     <form id="register-form" class="auth-form hidden">
-        <h2>Register</h2>
-        <label for="register-email">Email:</label>
-        <input type="email" id="register-email" required>
-        <label for="register-password">Password:</label>
-        <input type="password" id="register-password" required>
-        <button type="submit">Register</button>
-        <div id="register-error" class="error hidden"></div>
-        <p style="text-align: center; margin-top: 10px;">Already have an account? <a href="#" id="login-link">Login</a></p>
+    <h2>Register</h2>
+    <label for="register-email">Email:</label>
+    <input type="email" id="register-email" required>
+    <label for="register-password">Password:</label>
+    <input type="password" id="register-password" required>
+    <button type="submit">Register</button>
+    <div id="register-error" class="error hidden"></div>
+    <p style="text-align: center; margin-top: 10px;">Already have an account? <a href="#" id="login-link">Login</a></p>
     </form>
     <form id="forgot-password-form" class="auth-form hidden">
-        <h2>Reset Password</h2>
-        <label for="reset-email">Email:</label>
-        <input type="email" id="reset-email" required>
-        <button type="submit">Send Reset Email</button>
-        <div id="reset-error" class="error hidden"></div>
-        <p style="text-align: center; margin-top: 10px;"><a href="#" id="back-to-login">Back to Login</a></p>
+    <h2>Reset Password</h2>
+    <label for="reset-email">Email:</label>
+    <input type="email" id="reset-email" required>
+    <button type="submit">Send Reset Email</button>
+    <div id="reset-error" class="error hidden"></div>
+    <p style="text-align: center; margin-top: 10px;"><a href="#" id="back-to-login">Back to Login</a></p>
     </form>
-</div>
+    </div>
 <div id="main-app" style="display: none;">
     <aside class="sidebar">
         <div class="sidebar-header">
